# Aulas/aula10/swagger.yaml
@@ -36,6 +36,7 @@ paths:
                 $ref: '#/components/schemas/ArrayOfProdutos'
   /produtos/{id}:
     get:
+
       tags:
         - produtos
       parameters:
@@ -48,19 +49,21 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Produto'
+        
         400:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Mensagem' 
-        404: 
+                $ref: '#/components/schemas/Mensagem'
+        
+        404:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Mensagem'
+                $ref: "#/components/schemas/Mensagem"
     put:
       tags:
-        - produtos
+       - produtos
       parameters:
         - in: path
           type: string
@@ -75,17 +78,48 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Produto' 
+                $ref: '#/components/schemas/Produto'
         400:
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Mensagem'
+        
+        404:
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Mensagem" 
         422:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Mensagem'      
+                $ref: '#/components/schemas/Mensagem'
+    
+    delete:
+      tags:
+        - produtos
+      parameters:
+        - in: path
+          type: string
+          name: id
+      responses:
+        204:
+          content:
+
+        400:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Mensagem'
+        
+        404:
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Mensagem"
+        
+
 components:
   schemas:
     ArrayOfProdutos:
